# rust-vai

./: Cargo.toml  README.md  TODO.md  _vai  appveyor.yml  config  config.json  todo
.github/workflows/: audit.yml  build.yml  clippy.yml  fmt.yml  release.yml  test.yml
cli/: Cargo.toml
cli/res/: icon.kra
cli/src/: executor.rs  flag.rs  main.rs  prompt.rs  support.rs
cli/src/prompt/: action.rs  buffer.rs  completions.rs  context.rs  mod.rs  suggester.rs  terminal.rs
src/: completer.rs  error.rs  executors.rs  lib.rs  main.rs  parser.rs  suggester.rs  support.rs
