[package]
name = "vai-core"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
description = "A query launcher"

[workspace]
members = [
    "cli",
]

[dependencies]
bincode = "1.0"
dirs = "2.0"
fuzzy-matcher = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "0.11"
webbrowser = "0.5"
