[package]
name = "vai-core"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
description = "A browser query launcher"

[workspace]
members = [
    "cli",
]

[dependencies]
bincode = "1"
dirs = "2"
fuzzy-matcher = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "1"
webbrowser = "0.5"
