[package]
name = "vai-core"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2021"
description = "A browser query launcher"

[workspace]
members = [
    "cli",
]

[dependencies]
bincode = "1"
dirs = "4"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = "2"
webbrowser = "0.7"
