[package]
name = "vai"
version = "0.1.0"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
edition = "2018"
description = "A browser query launcher"

[package.metadata.bundle]
name = "Vai"
identifier = "com.mflima.vai"
icon = [ "res/icon*.png" ]
version = "0.1.0"
category = "public.app-category.utilities"
short_description = "A browser query launcher"

[dependencies]
atty = "0.2"
crossterm = "0.16"
joinery = "2"
vai-core = { path = ".." }
